Resolved [PUBMAN-2234] Block the author field when a CoNE author is chosen from the auto suggest list Resolved [PUBMAN-2293] Breadcrumb won't stop growing
Former-commit-id: 6558ce2703f4c819a97163d029f7a2a5bb75c8c2

--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -98,7 +98,7 @@
 					<span class="xTiny_area0">&nbsp;</span>
 				</h:panelGroup>
 				 --%>
-				<h:panelGroup layout="block" styleClass="clear free_area0 endline"
+				<h:panelGroup layout="block" styleClass="clear free_area0 endline personArea"
 					rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
@@ -140,7 +140,7 @@
 					<h:inputText id="inppersons_person_given_name_optional" styleClass="large_txtInput givenName" title="#{creator.person.givenName}" 
 						value="#{creator.person.givenName}"/>
 					<a4j:commandButton id="btnRemoveAuthorAutoSuggest" value=" " styleClass="xSmall_area0 closeIcon removeAutoSuggestPerson" style="display:none;"
-						onclick="return removeAuthorAutoSuggest($(this))" reRender="iterCreatorOrganisationAuthors"/>
+						onclick="return removeAuthorAutoSuggest($pb(this))" reRender="iterCreatorOrganisationAuthors"/>
 					<h:inputText id="inpcreator_hidden_organizations" styleClass="noDisplay organizationPasteField" title="#{creator.autoPasteValue}" 
 						value="#{creator.autoPasteValue}"/>
 					<a4j:commandButton reRender="editPerson" id="btnAddCreatorOrganization" styleClass="noDisplay hiddenButtonPasteOrganizations"
