Added Journal search criterion
Former-commit-id: 3474cd94f3818a6d89e0e2bba94d7003ee2446ad

--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEditNew.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEditNew.jspf
@@ -227,6 +227,13 @@
 				</span>
 				</h:panelGroup>
 				
+				
+				
+				<!-- input for journal searches-->
+				<h:panelGroup styleClass="sourceArea" rendered="#{criterion.searchCriterion == 'JOURNAL'}">
+					<h:outputLabel id="lblJournal" styleClass="double_label" value="#{lbl.adv_search_lblSearchTerm}" />
+					<h:inputText id="journalSearchTerm" styleClass="double_txtInput sourceTitle journalSuggest" value="#{criterion.searchString}" />
+				</h:panelGroup>
 
 				</span>
 				
