--- a/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
@@ -204,7 +204,7 @@
  				<span class="seperator status"></span>
  				<span class="free_area0_p6 endline itemHeadline">
  					<h:outputLink id="lnkList_shortTitle" title="#{item.fullTitle}" value="#{item.link}">
- 						<b><h:outputText value="#{item.shortTitle}" converter="HTMLSubSupConverter" escape="false"/></b>
+ 						<b><h:outputText value="#{item.fullTitle}" converter="HTMLSubSupShortTitleConverter" escape="false"/></b>
  					</h:outputLink>
  				</span>
  			</h:panelGroup>
