PUBMAN-2328 fixed: file and locator links from lists do not directly lead to file/locator section of ViewItemPage
Former-commit-id: 8239b25095a124f9064210fac30dd32fee918952

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -31,7 +31,8 @@
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://richfaces.org/rich" prefix="rich" %> <%@ taglib uri="http://richfaces.org/a4j" prefix="a4j" %>
 
-<h:panelGroup id="files" layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
+<h:panelGroup  rendered="#{!ViewItemFull.isStateWithdrawn}">
+<div id="files" class="full_area0 itemBlock">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
 		<h:outputText value="#{lbl.ViewItemMedium_lblSubHeaderFile}" />
 	</h3>
@@ -177,4 +178,6 @@
 			</h:panelGroup>
 		</a4j:repeat>
 	</h:panelGroup>
+
+</div>
 </h:panelGroup>
