--- a/pubman/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/LocatorsGroup.jspf
@@ -31,7 +31,8 @@
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://richfaces.org/rich" prefix="rich" %> <%@ taglib uri="http://richfaces.org/a4j" prefix="a4j" %>
 
-<h:panelGroup id="locators" layout="block" styleClass="full_area0 itemBlock" rendered="#{!ViewItemFull.isStateWithdrawn}">
+<h:panelGroup rendered="#{!ViewItemFull.isStateWithdrawn}">
+<div id="locators" class="full_area0 itemBlock">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
 		<h:outputText value="#{lbl.ViewItemFull_lblSubHeaderLocators}" />
 	</h3>
@@ -70,4 +71,5 @@
 
 		</a4j:repeat>
 	</h:panelGroup>
+</div>
 </h:panelGroup>
