Resolved [PUBMAN-2331] - View item: Errors after giving a false page number in gotoBox Resolved [PUBMAN-2330] - View item: after clicking "Revisions" the number of items is cleared Resolved [PUBMAN-2329] - View item: skipToFirst button does not work
Former-commit-id: 4b1b6afbe8a8ba8551224d8cdcb0a2a1ce58d126

--- a/pubman/pubman_presentation/src/main/webapp/list/itemRevisionsList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemRevisionsList.jspf
@@ -31,7 +31,7 @@ All rights reserved. Use is subject to license terms.
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://richfaces.org/rich" prefix="rich" %> <%@ taglib uri="http://richfaces.org/a4j" prefix="a4j" %>
 
-<a4j:repeat var="item" value="#{PubItemListSessionBean.currentPartList}">
+<a4j:repeat var="item" value="#{RevisionItemListSessionBean.currentPartList}">
 	<li class="full_area0 listItem">
 		<div class="free_area0 itemHeader">
 			<b class="huge_marginRIncl xTiny_marginLExcl"><h:outputText value="#{lbl.List_lblRevision}"/><br class="noDisplay" /></b>
