Sharing bug fixed
Former-commit-id: a6e75d0aff2d1b291a927cae2abcd31ad1dfe63b

--- a/pubman/pubman_presentation/src/main/webapp/audience/Audience.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/audience/Audience.jspf
@@ -52,7 +52,7 @@
 						<h:outputText value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
 					</b>
 					<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-						<h:selectOneMenu simple="true" id="selUserGroups" styleClass="quad_select" value="#{grantForAllFiles.grant.grantedTo}">
+						<h:selectOneMenu id="selUserGroups" styleClass="quad_select" value="#{grantForAllFiles.grant.grantedTo}">
 							<f:selectItems value="#{AudienceBean.userGroups}" />
 						</h:selectOneMenu>
 					</h:panelGroup>
