GUI work - browse by organization: delete cell floating
Former-commit-id: a473baa4f18f248380e47a8de2054c9aee369810

--- a/pubman/pubman_presentation/src/main/webapp/affiliation/AffiliationTree.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/affiliation/AffiliationTree.jspf
@@ -44,7 +44,7 @@
 				display:none;
 			}
 		</style>
-		<rich:tree id="treeAffiliation" var="node" switchType="ajax">
+		<rich:tree id="treeAffiliation" var="node" switchType="ajax" styleClass="noFloat">
 			<f:facet name="icon">
 				<!-- no image for expanded -->
 				<rich:spacer width="0"  height="0" style="border: none;"/>
