GUI work - browse by organization: delete cell floating

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -52,6 +52,10 @@
 .fullItem .itemHeadline table td {
 	float:left;
 }
+.fullItem .itemHeadline .noFloat table td {
+	float:none;
+}
+
 .fullItem .itemHeadline table td + td {
 	margin-left:2em;
 }
