--- a/pubman/pubman_presentation/src/main/webapp/viewItem/DetailGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/DetailGroup.jspf
@@ -77,8 +77,8 @@
 					<h:outputLabel id="lblViewItem_lblDatePublishedOnline" styleClass="large_label" value="#{lbl.ViewItem_lblDatePublishedOnline}: " title="#{lbl.ViewItem_lblDatePublishedOnline}: "/>
 					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.datePublishedOnline}"/>
 				</h:panelGroup>
-				<h:panelGroup styleClass="large_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.datePublishedInPrint != null && ViewItemFull.pubItem.metadata.datePublishedInPrint != ''}" >
-					<h:outputLabel id="lblViewItem_lblDatePublishedInPrint" styleClass="xLarge_label" value="#{lbl.ViewItem_lblDatePublishedInPrint}: " title="#{lbl.ViewItem_lblDatePublishedInPrint}:"/>
+				<h:panelGroup styleClass="double_area0 tiny_marginRIncl" rendered="#{ViewItemFull.pubItem.metadata.datePublishedInPrint != null && ViewItemFull.pubItem.metadata.datePublishedInPrint != ''}" >
+					<h:outputLabel id="lblViewItem_lblDatePublishedInPrint" styleClass="double_label" value="#{lbl.ViewItem_lblDatePublishedInPrint}: " title="#{lbl.ViewItem_lblDatePublishedInPrint}:"/>
 					<h:outputText styleClass="large_area0" value="#{ViewItemFull.pubItem.metadata.datePublishedInPrint}"/>
 				</h:panelGroup>
 			</span>
